// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todos GraphQL Query & Mutation 1`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 2`] = `
Object {
  "query": "mutation RemoveUser($email: String!, $clientMutationId: String) {
    removeUser(input: { email: $email, clientMutationId: $clientMutationId }) {
      clientMutationId
    }}",
  "variables": Object {
    "clientMutationId": "1",
    "email": "user@test.com",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 3`] = `"removeUser"`;

exports[`Todos GraphQL Query & Mutation 4`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "1",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 5`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 6`] = `
Object {
  "query": "mutation AddUser($email: String!, $clientMutationId: String ) {
    addUser(input: { email: $email, clientMutationId: $clientMutationId }) {
      id
      clientMutationId
    }}",
  "variables": Object {
    "clientMutationId": "2",
    "email": "user@test.com",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 7`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "2",
      "id": "VXNlcjo2",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 8`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 9`] = `
Object {
  "query": "mutation addTodo($text: String!, $userId: ID!, $clientMutationId: String) {
        addTodo(
          input: { text: $text, userId: $userId, clientMutationId: $clientMutationId }
        ) {
          user {
            email
            totalCount
            completedCount
          }
          todoEdge {
            cursor
            node {
              id
              text
              complete
            }
          }
          clientMutationId
        }
      }",
  "variables": Object {
    "clientMutationId": "3.0",
    "text": "Get A Customer 1",
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 10`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3.0",
      "todoEdge": Object {
        "cursor": "MTI=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMg==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 11`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 12`] = `
Object {
  "query": "query User($email: String!, $status: Status, $first: Int, $after: String) {
        user(email: $email) {
          id
          email
          completedCount
          totalCount
          todos(status: $status, first: $first, after: $after) {
            edges {
              cursor
              node {
                id
                complete
                __typename
              }
            }
            pageInfo {
              endCursor
              hasNextPage
            }
          }
        }
      }",
  "variables": Object {
    "email": "user@test.com",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 13`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user@test.com",
      "id": "VXNlcjo2",
      "todos": Object {
        "edges": null,
        "pageInfo": Object {
          "endCursor": null,
          "hasNextPage": true,
        },
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 14`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 15`] = `
Object {
  "query": "mutation markAllTodos($complete: Boolean!, $userId: ID!, $clientMutationId: String) {
      markAllTodos(input: { complete: $complete, userId: $userId, clientMutationId: $clientMutationId}) {
        user {
          id
          completedCount
          totalCount
        }
        changedTodos {
          id
          text
          complete
        }
        clientMutationId
      }
    }
    ",
  "variables": Object {
    "clientMutationId": "4",
    "complete": true,
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 16`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzoxMg==",
          "text": "Get A Customer 1",
        },
      ],
      "clientMutationId": "4",
      "user": Object {
        "completedCount": 1,
        "id": "VXNlcjo2",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 17`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 18`] = `
Object {
  "query": "mutation ChangeTodoStatus(
    $complete: Boolean!
    $id: ID!
    $userId: ID!
    $clientMutationId: String
  ) {
    changeTodoStatus(input: { 
      complete: $complete, id: $id, userId: $userId, 
      clientMutationId: $clientMutationId }) {
      todo {
        id
        text
        complete
      }
      user {
        id
        email
        totalCount
        completedCount
      }
      clientMutationId
    }
  }  
  ",
  "variables": Object {
    "clientMutationId": "5.0",
    "complete": false,
    "id": "VG9kbzoxMg==",
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 19`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5.0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMg==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "id": "VXNlcjo2",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 20`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 21`] = `
Object {
  "query": "mutation ChangeTodoStatus(
    $complete: Boolean!
    $id: ID!
    $userId: ID!
    $clientMutationId: String
  ) {
    changeTodoStatus(input: { 
      complete: $complete, id: $id, userId: $userId, 
      clientMutationId: $clientMutationId }) {
      todo {
        id
        text
        complete
      }
      user {
        id
        email
        totalCount
        completedCount
      }
      clientMutationId
    }
  }  
  ",
  "variables": Object {
    "clientMutationId": "6.0",
    "complete": true,
    "id": "VG9kbzoxMg==",
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 22`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6.0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxMg==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user@test.com",
        "id": "VXNlcjo2",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 23`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 24`] = `
Object {
  "query": "mutation clearCompletedTodos($userId: ID!, $clientMutationId: String) {
      clearCompletedTodos(input: {userId: $userId, clientMutationId: $clientMutationId}) {
        deletedTodoIds
        user {
          id
          completedCount
          totalCount
        }
        clientMutationId
      }
    }
    ",
  "variables": Object {
    "clientMutationId": "7",
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 25`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "7",
      "deletedTodoIds": Array [
        "VG9kbzoxMg==",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjo2",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 26`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 27`] = `
Object {
  "query": "mutation addTodo($text: String!, $userId: ID!, $clientMutationId: String) {
        addTodo(
          input: { text: $text, userId: $userId, clientMutationId: $clientMutationId }
        ) {
          user {
            email
            totalCount
            completedCount
          }
          todoEdge {
            cursor
            node {
              id
              text
              complete
            }
          }
          clientMutationId
        }
      }",
  "variables": Object {
    "clientMutationId": "8",
    "text": "Get A Job",
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 28`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 29`] = `
Object {
  "query": "mutation renameTodo($id: ID!, $text: String!, $clientMutationId: String) {
        renameTodo(
          input: { id: $id, text: $text, clientMutationId: $clientMutationId }
        ) {
          todo {
            id
            text
            complete
          }
          clientMutationId
        }
      }",
  "variables": Object {
    "clientMutationId": "9.0",
    "id": "VG9kbzoxMg==",
    "text": "renamed 0",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 30`] = `
Object {
  "data": Object {
    "renameTodo": null,
  },
  "errors": Array [
    Object {
      "message": "Non existence id",
      "path": Array [
        "renameTodo",
      ],
    },
  ],
}
`;

exports[`Todos GraphQL Query & Mutation 31`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 32`] = `
Object {
  "query": "mutation removeTodo($id: ID!, $userId: ID!, $clientMutationId: String) {
        removeTodo(
          input: { id: $id, userId: $userId, clientMutationId: $clientMutationId }
        ) {
          user {
            id
            email
            totalCount
            completedCount
          }
          clientMutationId
        }
      }",
  "variables": Object {
    "clientMutationId": "10.0",
    "id": "VG9kbzoxMg==",
    "userId": "VXNlcjo2",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 33`] = `
Object {
  "data": Object {
    "removeTodo": Object {
      "clientMutationId": "10.0",
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "id": "VXNlcjo2",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 34`] = `
"
=================================================="
`;

exports[`Todos GraphQL Query & Mutation 35`] = `
Object {
  "query": "query User($email: String!, $status: Status, $first: Int, $after: String) {
        user(email: $email) {
          id
          email
          completedCount
          totalCount
          todos(status: $status, first: $first, after: $after) {
            edges {
              cursor
              node {
                id
                complete
                __typename
              }
            }
            pageInfo {
              endCursor
              hasNextPage
            }
          }
        }
      }",
  "variables": Object {
    "email": "user@test.com",
  },
}
`;

exports[`Todos GraphQL Query & Mutation 36`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user@test.com",
      "id": "VXNlcjo2",
      "todos": Object {
        "edges": null,
        "pageInfo": Object {
          "endCursor": null,
          "hasNextPage": true,
        },
      },
      "totalCount": 1,
    },
  },
}
`;
